# energy-spread-trading

./: .gitignore  LICENSE  Makefile  README.md  build_features.py  config.yaml  ensemble_models.py  features.py  optimize.py  prepare_data.py  pyproject.toml  requirements.txt  train_model.py  train_pipeline.py
data/: energy_data.csv
experiments/: eda.py  simulate_training.py  train_classifier.py  train_lstm.py
src/core/data/: loader.py
src/data/: loader.py
src/ml/: conformal.py  ensemble.py  features.py  trainer.py
src/pipelines/: optimize.py  train.py
src/trading/: exit_strategies.py  metrics.py  position_manager.py
src/ui/: display.py
tests/: test_data.py  test_ml.py  test_smoke.py  test_trading.py
